--- a/index.html
+++ b/index.html
@@ -1,10 +1,9 @@
 <!doctype html>
-<html lang="en">
+<html lang="pt-BR">
   <head>
-    <meta charset="UTF-8" />
-    <link rel="icon" type="image/svg+xml" href="/vite.svg" />
+    <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>calendario-academico-ifba-paf</title>
+    <title>Calendário Acadêmico - IFBA PA</title>
   </head>
   <body>
     <div id="root"></div>
