--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
   <head>
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Calendário Acadêmico - IFBA PA</title>
+    <title>Calendário Acadêmico - IFBA PAULO AFONSO</title>
   </head>
   <body>
     <div id="root"></div>
